--- a/Module_2.css
+++ b/Module_2.css
@@ -1,11 +1,45 @@
 
 .tablet {
     background-color: lightgrey;
-    width: 300px;
-    border: 25px solid green;
-    padding: 25px;
-    margin: 25px;
+    width: 760px;
+    height: 150px;
+    border: 15px solid green;
+    padding: 15px;
+    margin: 15px;
+    margin-left: 280px;
+	align : center;
 }
-h1{
-	color: blue;
+p{
+width: 80px;
+height: 40px;
+border: 1px;
+margin-bottom:10px;
+
+}
+#p1{
+	background-color: skyblue;
+	position: relative;
+	top: 1px;
+	left: 680px;
+	text-align: center;
+	margin-top: 5px;
+	font-size: 22px;
+}
+#p2{
+	background-color: skyblue;
+	position: relative;
+	top: 1px;
+	left: 680px;
+	text-align: center;
+	margin-top: 5px;
+	font-size: 22px;
+
+}
+#p3{
+	background-color: skyblue;
+	position: relative;
+	top: 1px;
+	left: 680px;
+	font-size: 22px;
+	text-align: center;
 }
